JDK8 for TS plugin only:proteus_f7

--- a/java_tools/build.gradle
+++ b/java_tools/build.gradle
@@ -11,6 +11,10 @@ allprojects {
           // TS still comes with 1.8 and we have a plugin, lets build compatible
           sourceCompatibility = '8'
           targetCompatibility = '8'
+          // [tag:java8]
+          toolchain {
+            languageVersion.set(JavaLanguageVersion.of(11))
+          }
         }
 
         dependencies {
