add `Limit Torque Reduction Time` flag #5608

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4918,7 +4918,8 @@ dialog = tcuControls, "Transmission Settings"
 		panel = LaunchButtonDialog,				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@}
 
 	dialog = TorqueReductionSettings, "Settings"
-		field = "Torque Reduction Time",			torqueReductionTime
+	    field = "Limit Torque Reduction Time",      limitTorqueReductionTime
+		field = "Torque Reduction Time",			torqueReductionTime,            {limitTorqueReductionTime != 0}
 		field = "Torque Reduction Arming RPM",		torqueReductionArmingRpm
 		field = "Torque Reduction Arming APP",		torqueReductionArmingApp
 		field = "Torque Reduction Ignition Retard",	torqueReductionIgnitionRetard
