global_can_data docs

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4983,7 +4983,7 @@ dialog = tcuControls, "Transmission Settings"
         field = dacOutputPins1,         dacOutputPins1
         field = dacOutputPins2,         dacOutputPins2
 
-        field = luaCanRxWorkaround,     luaCanRxWorkaround
+        field = "luaCanRxWorkaround CAN performance hack",     luaCanRxWorkaround
         field = "Read RPM matching VSS profile",    canInputBCM
         field = auxSpeed1Multiplier,    auxSpeed1Multiplier
         field = magicNumberAvailableForDevTricks, magicNumberAvailableForDevTricks
