How does the ECU decide when to use MAP estimate? #7030
new 'isMapValid' logging data point

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3510,9 +3510,13 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "MAP value high point",						map_sensor_highValue, { map_sensor_hwChannel != @@ADC_CHANNEL_NONE@@ && map_sensor_type == 0 }
 		field = "MAP voltage high value",					mapHighValueVoltage, { map_sensor_hwChannel != @@ADC_CHANNEL_NONE@@ && map_sensor_type == 0 }
 
+	indicatorPanel = mapValidIndicators, 1
+		indicator = {isMapValid}, "BAD Map Input", "Happy MAP Input"
+
 	dialog = mapCommon, "MAP common settings"
 		field = "Low value threshold",					mapErrorDetectionTooLow
 		field = "High value threshold",					mapErrorDetectionTooHigh
+		panel = mapValidIndicators
 		field = ""
 		field = "Measure Map Only In One Cylinder",		measureMapOnlyInOneCylinder
 		field = "Cylinder count to sample MAP",					mapMinBufferLength
