--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3574,13 +3574,14 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = egoSettings_IO2,	"O2 Sensor 2 I/O"
 		field = "Input channel",						afr_hwChannel2
 
-	indicatorPanel = uegoCan0Indicators, 1, { enableAemXSeries == 1 }
+	indicatorPanel = uegoCan0Indicators, 1, { enableAemXSeries == 1 && (faultCode0 == 7 || faultCode0 == 8) }
 		indicator = { faultCode0 == 7 }, "RusEFI WBO", "AEM Gauge", green, black, yellow, black
+		indicator = { faultCode0 == 8 }, "AEM OK", "AEM ERROR", green, black, yellow, black
 
-	indicatorPanel = uegoCan1Indicators, 1, { enableAemXSeries == 1 }
+	indicatorPanel = uegoCan1Indicators, 1, { enableAemXSeries == 1 && (faultCode0 == 7 || faultCode0 == 8) }
 		indicator = { faultCode1 == 7 }, "RusEFI WBO", "AEM Gauge", green, black, yellow, black
 
-	indicatorPanel = uegoCan0IndicatorsExt, 1, { enableAemXSeries == 1 && faultCode0 != 7 }
+	indicatorPanel = uegoCan0IndicatorsExt, 1, { enableAemXSeries == 1 && faultCode0 != 7 && faultCode0 != 8 }
 		indicator = { faultCode0 == 0 || faultCode0 == 7 }, "Failed", "Ready/Ok", red, black, green, black
 		indicator = { faultCode0 == 2 }, "Heating allowed", "Heating prohibited", green, black, yellow, black
 		indicator = { faultCode0 == 1 }, "Communication ok", "Timeout reading", green, black, red, black
@@ -3589,7 +3590,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		indicator = { faultCode0 == 5 }, "No underheat", "Underheat", green, black, red, black
 		indicator = { faultCode0 == 6 }, "Heater supply ok", "No heater supply", green, black, yellow, black
 
-	indicatorPanel = uegoCan1IndicatorsExt, 1, { enableAemXSeries == 1 && faultCode1 != 7 }
+	indicatorPanel = uegoCan1IndicatorsExt, 1, { enableAemXSeries == 1 && faultCode1 != 7 && faultCode0 != 8 }
 		indicator = { faultCode1 == 0 || faultCode1 == 7 }, "Failed", "Ready/Ok", red, black, green, black
 		indicator = { faultCode1 == 2 }, "Heating allowed", "Heating prohibited", green, black, yellow, black
 		indicator = { faultCode1 == 1 }, "Communication ok", "Timeout reading", green, black, red, black
