TS: implement getCommand that have no params and request all livedata
But until ochBlockSize is bigger than blockingFactor TS will not use
this command and prefer ochGetCommand.

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -187,6 +187,9 @@ enable2ndByteCanID = false
 ;
 ; in order to add new TunerStudio data point you need to change one of *.txt files mentioned in LiveData.yaml
 ;
+[BurstMode]
+	getCommand       = "A"
+
 [OutputChannels]
 
 	ochGetCommand	= "O%2o%2c"
