simulator job does not take proper branch name #6904 only:uaefi

--- a/.github/workflows/build-simulator.yaml
+++ b/.github/workflows/build-simulator.yaml
@@ -2,6 +2,9 @@ name: Simulator
 
 on: [push, pull_request]
 
+env:
+  AUTOMATION_REF: ${{github.ref_name}}
+
 jobs:
   # This is just to ensure the simulator compiles on Linux
   build-simulator:
