--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 indent_size = 2
+cpp_new_line_before_open_brace_block = same_line
 
 # 4 space indentation
 [*.java]
