--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -883,6 +883,34 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xBins = ignBlends4_blendBins, ignBlendParameter4
 		yBins = ignBlends4_blendValues
 
+	curve = lambdaAdder1Bias, "Lambda adder 1 bias"
+		columnLabel = "param", "bias"
+		xAxis = 0, 100, 11
+		yAxis = 0, 100, 5
+		xBins = lambdaBlends1_blendBins, lambdaBlendParameter1
+		yBins = lambdaBlends1_blendValues
+	
+	curve = lambdaAdder2Bias, "Lambda adder 2 bias"
+		columnLabel = "param", "bias"
+		xAxis = 0, 100, 11
+		yAxis = 0, 100, 5
+		xBins = lambdaBlends2_blendBins, lambdaBlendParameter2
+		yBins = lambdaBlends2_blendValues
+
+	curve = lambdaAdder3Bias, "Lambda adder 3 bias"
+		columnLabel = "param", "bias"
+		xAxis = 0, 100, 11
+		yAxis = 0, 100, 5
+		xBins = lambdaBlends3_blendBins, lambdaBlendParameter3
+		yBins = lambdaBlends3_blendValues
+
+	curve = lambdaAdder4Bias, "Lambda adder 4 bias"
+		columnLabel = "param", "bias"
+		xAxis = 0, 100, 11
+		yAxis = 0, 100, 5
+		xBins = lambdaBlends4_blendBins, lambdaBlendParameter4
+		yBins = lambdaBlends4_blendValues
+
 	curve = veBlend1Bias, "VE blend 1 bias"
 		columnLabel = "param", "bias"
 		xAxis = 0, 100, 11
@@ -1098,6 +1126,34 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xBins		= ignBlends4_rpmBins, RPMValue
 		yBins		= ignBlends4_loadBins, ignitionLoad
 		zBins		= ignBlends4_table
+		gridOrient  = 250, 0, 340
+
+	table = lambdaAdder1Table, lambdaAdder1Map, "Lambda adder 1", 1
+		xyLabels = "RPM", "Fueling Load"
+		xBins		= lambdaBlends1_rpmBins, RPMValue
+		yBins		= lambdaBlends1_loadBins, fuelingLoad
+		zBins		= lambdaBlends1_table
+		gridOrient  = 250, 0, 340
+	
+	table = lambdaAdder2Table, lambdaAdder2Map, "Lambda adder 1", 1
+		xyLabels = "RPM", "Fueling Load"
+		xBins		= lambdaBlends2_rpmBins, RPMValue
+		yBins		= lambdaBlends2_loadBins, fuelingLoad
+		zBins		= lambdaBlends2_table
+		gridOrient  = 250, 0, 340
+
+	table = lambdaAdder3Table, lambdaAdder3Map, "Lambda adder 1", 1
+		xyLabels = "RPM", "Fueling Load"
+		xBins		= lambdaBlends3_rpmBins, RPMValue
+		yBins		= lambdaBlends3_loadBins, fuelingLoad
+		zBins		= lambdaBlends3_table
+		gridOrient  = 250, 0, 340
+
+	table = lambdaAdder4Table, lambdaAdder4Map, "Lambda adder 1", 1
+		xyLabels = "RPM", "Fueling Load"
+		xBins		= lambdaBlends4_rpmBins, RPMValue
+		yBins		= lambdaBlends4_loadBins, fuelingLoad
+		zBins		= lambdaBlends4_table
 		gridOrient  = 250, 0, 340
 
 	table = veBlend1Table, veBlend1Map, "VE blend 1", 1
@@ -1972,6 +2028,15 @@ menuDialog = main
 
 #if LAMBDA
 		subMenu = lambdaTableTbl,				"Target lambda", 0, {isInjectionEnabled == 1}
+		groupMenu = "Target lambda blend tables"
+		groupChildMenu = lambdaBlend1Cfg,		"lambda blend 1 bias", 0, {isInjectionEnabled}
+		groupChildMenu = lambdaBlend1Table,		"lambda blend table 1", 0, { isInjectionEnabled && lambdaBlends1_blendParameter != 0 }
+		groupChildMenu = lambdaBlend2Cfg,		"lambda blend 2 bias", 0, {isInjectionEnabled}
+		groupChildMenu = lambdaBlend2Table,		"lambda blend table 2", 0, { isInjectionEnabled && lambdaBlends2_blendParameter != 0 }
+		groupChildMenu = lambdaBlend3Cfg,		"lambda blend 3 bias", 0, {isInjectionEnabled}
+		groupChildMenu = lambdaBlend3Table,		"lambda blend table 3", 0, { isInjectionEnabled && lambdaBlends3_blendParameter != 0 }
+		groupChildMenu = lambdaBlend4Cfg,		"lambda blend 4 bias", 0, {isInjectionEnabled}
+		groupChildMenu = lambdaBlend4Table,		"lambda blend table 4", 0, { isInjectionEnabled && lambdaBlends4_blendParameter != 0 }
 #else
 		subMenu = afrTableTbl,				"Target AFR", 0, {isInjectionEnabled == 1}
 #endif
@@ -2874,6 +2939,50 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Blend parameter", veBlends4_blendParameter
 		field = "Y axis override (set Zero for no override)", veBlends4_yAxisOverride, {veBlends4_blendParameter}
 		panel = veBlend4Bias, {veBlends4_blendParameter}
+
+	dialog = lambdaBlend1Cfg, "lambda blend 1 config"
+		field = "#The bias table controls how much of the blend table"
+		field = "#is mixed in to the VE table. For example, a value of"
+		field = "#+10 in the table, with 0.5 as the current bias will result"
+		field = "#in 0.05 added to the lambda target."
+		field = "#The X axis of the bias table is controlled by the selected blend"
+		field = "#parameter below."
+		field = "Blend parameter", lambdaBlends1_blendParameter
+		field = "Y axis override (set Zero for no override)", lambdaBlends1_yAxisOverride, {lambdaBlends1_blendParameter}
+		panel = lambdaBlend1Bias, {lambdaBlends1_blendParameter}
+
+	dialog = lambdaBlend2Cfg, "lambda blend 1 config"
+		field = "#The bias table controls how much of the blend table"
+		field = "#is mixed in to the VE table. For example, a value of"
+		field = "#+10 in the table, with 0.5 as the current bias will result"
+		field = "#in 0.05 added to the lambda target."
+		field = "#The X axis of the bias table is controlled by the selected blend"
+		field = "#parameter below."
+		field = "Blend parameter", lambdaBlends2_blendParameter
+		field = "Y axis override (set Zero for no override)", lambdaBlends2_yAxisOverride, {lambdaBlends2_blendParameter}
+		panel = lambdaBlend2Bias, {lambdaBlends2_blendParameter}
+
+	dialog = lambdaBlend3Cfg, "lambda blend 1 config"
+		field = "#The bias table controls how much of the blend table"
+		field = "#is mixed in to the VE table. For example, a value of"
+		field = "#+10 in the table, with 0.5 as the current bias will result"
+		field = "#in 0.05 added to the lambda target."
+		field = "#The X axis of the bias table is controlled by the selected blend"
+		field = "#parameter below."
+		field = "Blend parameter", lambdaBlends3_blendParameter
+		field = "Y axis override (set Zero for no override)", lambdaBlends3_yAxisOverride, {lambdaBlends3_blendParameter}
+		panel = lambdaBlend3Bias, {lambdaBlends3_blendParameter}
+
+	dialog = lambdaBlend4Cfg, "lambda blend 1 config"
+		field = "#The bias table controls how much of the blend table"
+		field = "#is mixed in to the VE table. For example, a value of"
+		field = "#+10 in the table, with 0.5 as the current bias will result"
+		field = "#in 0.05 added to the lambda target."
+		field = "#The X axis of the bias table is controlled by the selected blend"
+		field = "#parameter below."
+		field = "Blend parameter", lambdaBlends4_blendParameter
+		field = "Y axis override (set Zero for no override)", lambdaBlends4_yAxisOverride, {lambdaBlends4_blendParameter}
+		panel = lambdaBlend4Bias, {lambdaBlends4_blendParameter}
 
 	indicatorPanel = isBoostControlledPanel, 1
 		indicator = {isBoostControlled}, "No Boost Control", "Boost Control Active"
