--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,7 @@
 {
     "files.associations": {
-		"xstring": "cpp",
-		"ios": "cpp",
-		"xlocale": "cpp",
-		"xtr1common": "cpp",
-		"xiosbase": "cpp",
-		"deque": "cpp",
-		"forward_list": "cpp",
-		"list": "cpp",
-		"system_error": "cpp",
-		"vector": "cpp",
-		"xhash": "cpp",
-		"xtree": "cpp"
+		"*.input": "ini",
+		"atomic": "cpp"
 	},
 	"editor.detectIndentation": false,
 	"editor.indentSize": 4,
