--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1974,9 +1974,9 @@ menuDialog = main
 		subMenu = lambdaTableTbl,				"Target lambda", 0, {isInjectionEnabled == 1}
 		groupMenu = "Target lambda blend tables"
 		groupChildMenu = lambdaBlend1Cfg,		"lambda blend 1 bias", 0, {isInjectionEnabled}
-		groupChildMenu = lambdaBlend1Table,		"lambda blend table 1", 0, { isInjectionEnabled && lambdaBlends1_blendParameter != 0 }
+		groupChildMenu = lambdaAdder1Table,		"lambda blend table 1", 0, { isInjectionEnabled && lambdaBlends1_blendParameter != 0 }
 		groupChildMenu = lambdaBlend2Cfg,		"lambda blend 2 bias", 0, {isInjectionEnabled}
-		groupChildMenu = lambdaBlend2Table,		"lambda blend table 2", 0, { isInjectionEnabled && lambdaBlends2_blendParameter != 0 }
+		groupChildMenu = lambdaAdder2Table,		"lambda blend table 2", 0, { isInjectionEnabled && lambdaBlends2_blendParameter != 0 }
 #else
 		subMenu = afrTableTbl,				"Target AFR", 0, {isInjectionEnabled == 1}
 #endif
@@ -2863,9 +2863,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "#parameter below."
 		field = "Blend parameter", lambdaBlends1_blendParameter
 		field = "Y axis override (set Zero for no override)", lambdaBlends1_yAxisOverride, {lambdaBlends1_blendParameter}
-		panel = lambdaBlend1Bias, {lambdaBlends1_blendParameter}
+		panel = lambdaAdder1Bias, {lambdaBlends1_blendParameter}
 
-	dialog = lambdaBlend2Cfg, "lambda blend 1 config"
+	dialog = lambdaBlend2Cfg, "lambda blend 2 config"
 		field = "#The bias table controls how much of the blend table"
 		field = "#is mixed in to the VE table. For example, a value of"
 		field = "#+10 in the table, with 0.5 as the current bias will result"
@@ -2874,7 +2874,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "#parameter below."
 		field = "Blend parameter", lambdaBlends2_blendParameter
 		field = "Y axis override (set Zero for no override)", lambdaBlends2_yAxisOverride, {lambdaBlends2_blendParameter}
-		panel = lambdaBlend2Bias, {lambdaBlends2_blendParameter}
+		panel = lambdaAdder2Bias, {lambdaBlends2_blendParameter}
 
 	indicatorPanel = isBoostControlledPanel, 1
 		indicator = {isBoostControlled}, "No Boost Control", "Boost Control Active"
