--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2041,6 +2041,7 @@ menuDialog = main
 		subMenu = multisparkSettings,		"Multispark", 0, {isIgnitionEnabled == 1}@@if_ts_show_multispark
 		subMenu = softwareKnock,			"Knock Control" @@if_ts_show_software_knock
 		subMenu = maxKnockRetardTbl,		"Max knock retard" @@if_ts_show_software_knock
+		subMenu = igntionSmoothing			"TPS / Ignition smoothing", 0, {isIgnitionEnabled == 1}
 
 	menu = "&Cranking"
 		subMenu = crankingDialog,			"Cranking settings"
@@ -2783,6 +2784,22 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Enable multiple sparks",				multisparkEnable
 		panel = multisparkMain
 		panel = multisparkDwellParams
+
+	dialog = igntionSmoothingLimitSettings, "Configate limits"
+		field = "Maximum ignition timing", 				maxAdvanceSmoothing
+		field = "Minimum ignition timing", 				minAdvanceSmoothing
+	
+	dialog = igntionSmoothingSettings, "Configate correction"
+		field = "Maximum increment ignition timing", 	increaseAdvanceSmoothing
+		field = "Minimum decrement ignition timing", 	decreaseAdvanceSmoothing
+		field = "Correction timeout", 					timeoutAdvanceSmoothing
+
+	dialog = igntionSmoothing, "TPS / Ignition smoothing"
+		field = "When high speed TPS var is detected, increment or decrease ignition advance"
+		field = "in order to reduce torque variation"
+		field = "Enable ignition smoothing", 			enableAdvanceSmoothing
+		panel = igntionSmoothingLimitSettings
+		panel = igntionSmoothingSettings
 
 	dialog = ignAdder1Cfg, "Ignition adder 1 config"
 		field = "#The bias table controls how much of the blend table"
