--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2786,13 +2786,14 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = multisparkDwellParams
 
 	dialog = igntionSmoothingLimitSettings, "Configate limits"
-		field = "Maximum ignition timing", 				maxAdvanceSmoothing
-		field = "Minimum ignition timing", 				minAdvanceSmoothing
+		field = "Maximum ignition timing", 				maxAdvanceSmoothing, {enableAdvanceSmoothing}
+		field = "Minimum ignition timing", 				minAdvanceSmoothing, {enableAdvanceSmoothing}
 	
 	dialog = igntionSmoothingSettings, "Configate correction"
-		field = "Maximum increment ignition timing", 	increaseAdvanceSmoothing
-		field = "Minimum decrement ignition timing", 	decreaseAdvanceSmoothing
-		field = "Correction timeout", 					timeoutAdvanceSmoothing
+		field = "Maximum increment ignition timing", 	increaseAdvanceSmoothing, {enableAdvanceSmoothing}
+		field = "Minimum decrement ignition timing", 	decreaseAdvanceSmoothing, {enableAdvanceSmoothing}
+		field = "Correction timeout", 					timeoutAdvanceSmoothing, {enableAdvanceSmoothing}
+		field = "Minimum delta load", 					deltaLoadSmoothingThreshold, {enableAdvanceSmoothing}
 
 	dialog = igntionSmoothing, "TPS / Ignition smoothing"
 		field = "When high speed TPS var is detected, increment or decrease ignition advance"
