--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2041,7 +2041,7 @@ menuDialog = main
 		subMenu = multisparkSettings,		"Multispark", 0, {isIgnitionEnabled == 1}@@if_ts_show_multispark
 		subMenu = softwareKnock,			"Knock Control" @@if_ts_show_software_knock
 		subMenu = maxKnockRetardTbl,		"Max knock retard" @@if_ts_show_software_knock
-		subMenu = igntionSmoothing			"TPS / Ignition smoothing", 0, {isIgnitionEnabled == 1}
+		subMenu = igntionSmoothing			"Load Ignition smoothing", 0, {isIgnitionEnabled == 1}
 
 	menu = "&Cranking"
 		subMenu = crankingDialog,			"Cranking settings"
@@ -2791,12 +2791,13 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	
 	dialog = igntionSmoothingSettings, "Configate correction"
 		field = "Maximum increment ignition timing", 	increaseAdvanceSmoothing, {enableAdvanceSmoothing}
-		field = "Minimum decrement ignition timing", 	decreaseAdvanceSmoothing, {enableAdvanceSmoothing}
-		field = "Correction timeout", 					timeoutAdvanceSmoothing, {enableAdvanceSmoothing}
+		field = "Maximum decrement ignition timing", 	decreaseAdvanceSmoothing, {enableAdvanceSmoothing}
+		field = "Correction timeout in cicles",			timeoutAdvanceSmoothing, {enableAdvanceSmoothing}
 		field = "Minimum delta load", 					deltaLoadSmoothingThreshold, {enableAdvanceSmoothing}
+		field = "Correction strenght"					strenghtAdvanceSmoothing, {enableAdvanceSmoothing}
 
-	dialog = igntionSmoothing, "TPS / Ignition smoothing"
-		field = "When high speed TPS var is detected, increment or decrease ignition advance"
+	dialog = igntionSmoothing, "Load Ignition smoothing"
+		field = "When high speed Load var is detected, increment or decrease ignition advance"
 		field = "in order to reduce torque variation"
 		field = "Enable ignition smoothing", 			enableAdvanceSmoothing
 		panel = igntionSmoothingLimitSettings
