Non tested - Minor functions
Aplicar correções de lenta a coasting IAC taper table quando utilizar IAC taper table while coasting
Delay no startup do 1o e 2o estágio da ventoinha quando com ar condicionado

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3832,6 +3832,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "On temperature",					fanOnTemperature
 		field = "Off temperature",					fanOffTemperature
 		field = "Enable with AC",					enableFan1WithAc
+		field = "AC enable threshold"				Fan1AcThreshold, {enableFan1WithAc}
 		field = "Disable when engine stopped",		disableFan1WhenStopped
 		field = "Disable above vehicle speed",    disableFan1AtSpeed
 		field = "Idle adder",							fan1ExtraIdle
@@ -3842,6 +3843,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "On temperature",					fan2OnTemperature
 		field = "Off temperature",					fan2OffTemperature
 		field = "Enable with AC",					enableFan2WithAc
+		field = "AC enable threshold"				Fan2AcThreshold, {enableFan2WithAc}
 		field = "Disable when engine stopped",		disableFan2WhenStopped
 		field = "Disable above vehicle speed",    disableFan2AtSpeed
 		field = "Idle adder",							fan2ExtraIdle
