--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4760,10 +4760,10 @@ dialog = tcuControls, "Transmission Settings"
 		field = "PWM Frequency",						etbFreq
 		field = "Minimum ETB position",					etbMinimumPosition
 		field = "Maximum ETB position",					etbMaximumPosition
-		field = ""
-		field = "Jam detection error max",				etbJamDetectThreshold, { etbJamDetectThreshold == 0 || etbJamTimeout != 0 }
-		field = "Jam detection timeout period",			etbJamTimeout, { etbJamDetectThreshold != 0 }
-		field = "Disables jam detection for testing until the next power cycle"
+;		field = ""
+;		field = "Jam detection error max",				etbJamDetectThreshold
+;		field = "Jam detection timeout period",			etbJamTimeout
+;		field = "Disables jam detection for testing until the next power cycle"
 		commandButton = "Temporarily disable jam detection", cmd_etb_disable_jam_detect
 		panel = etbIndicatorPanel
 		; we need the term about stepper idle in here, because there's a bug in TS that you can't have different visibility
