--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4747,6 +4747,10 @@ dialog = tcuControls, "Transmission Settings"
 	dialog = etbIdleDialog, "ETB Idle"
 		field = "ETB idle maximum angle",				etbIdleThrottleRange
 
+    indicatorPanel = etbIndicatorPanel, 1
+	      indicator = {jamDetected0}, "jamDetected No", "jamDetected Yes"
+
+
 	dialog = etbDialogLeft
 		field = "https://rusefi.com/s/etb"
 		field = "Disable ETB if engine is stopped",		disableEtbWhenEngineStopped
@@ -4761,6 +4765,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Jam detection timeout period",			etbJamTimeout, { etbJamDetectThreshold != 0 }
 		field = "Disables jam detection for testing until the next power cycle"
 		commandButton = "Temporarily disable jam detection", cmd_etb_disable_jam_detect
+		panel = etbIndicatorPanel
 		; we need the term about stepper idle in here, because there's a bug in TS that you can't have different visibility
 		; criteria for the same panel when used in multiple places
 		; todo: report bug to TS?
