First Long Time Fuel Trim Implementation
For this the ECU must be always on 5V

It's based on STFT and an bias curve. The correction is linear if STFT greater than as threshold defined by: (1-10^ (-20*abs(1-STFT))), so, the correction must be stable;

We have some limits on the correction, using CLT sensor, of using the LTFT table and modifying it.

Was implemented a delay on  the correction after fast acceleration by TPS, as it could be an problem to the correction.

Some minor details...

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1179,6 +1179,22 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		gridOrient  = 250,	0, 340 ; Space 123 rotation of grid in degrees.
 		upDownLabel = "(RICHER)", "(LEANER)"
 
+	table = ltftTableTbl,  ltftTableMap,  "Long Term Fuel Trim Table", 1
+		xyLabels = "RPM", "load"
+		xBins		= veRpmBins,  RPMValue
+		yBins		= veLoadBins, veTableYAxis
+		zBins		= ltftTable
+;		gridHeight  = 2.0
+		gridOrient  = 250,	0, 340 ; Space 123 rotation of grid in degrees.
+
+	table = ltftCorrectionRateTbl,  ltftCorrectionRateMap,  "Long Term Fuel Trim Correction Rate Table", 1
+		xyLabels = "RPM", "load"
+		xBins		= veRpmBins,  RPMValue
+		yBins		= veLoadBins, veTableYAxis
+		zBins		= ltftCorrectionRate
+;		gridHeight  = 2.0
+		gridOrient  = 250,	0, 340 ; Space 123 rotation of grid in degrees.
+
 	table = idleVeTableTbl, idleVeTable, "Idle VE"
 		xyLabels = "RPM", "load"
 		xBins		= idleVeRpmBins,  RPMValue
@@ -1657,7 +1673,7 @@ gaugeCategory = Fueling
 	actualLastInjectionStg2Gauge	= actualLastInjectionStage2,	@@GAUGE_NAME_FUEL_LAST_INJECTION_STAGE_2@@, "mSec",		0,	25.5,	1.0,	1.2,		20,	25,	3, 1
 	veValueGauge		= veValue,					"fuel: VE",				"",		0,	120,		10,	10,	100,	100,	1,	1
   gegoGauge            = Gego,                                      "EGO",                             "",             50,      160,            10,     10,     100,    100,    1,      1
-
+ ltftGauge            = Ltft,                                      "LTFT",                             "",             50,      160,            10,     10,     100,    100,    1,      1
 	injectorLagMsGauge = m_deadtime,		@@GAUGE_NAME_INJECTOR_LAG@@,		"mSec",		0,	10,	0,	0,		10,	10,	3, 1
 	fuelRunningGauge	= running_fuel,		@@GAUGE_NAME_FUEL_RUNNING@@,		"mg",		0,	100,	0,	0,		100,	100,	3, 1
 	baseFuelGauge	= running_baseFuel,		@@GAUGE_NAME_FUEL_BASE@@,		"mg",		0,	100, 0, 0, 100, 100,	2, 0
@@ -1990,7 +2006,12 @@ menuDialog = main
 
 		subMenu = cltFuelCorrCurve,			"CLT multiplier", 0, {isInjectionEnabled == 1}
 		subMenu = iatFuelCorrCurve,			"IAT multiplier", 0, {isInjectionEnabled == 1}
-		subMenu = fuelClosedLoopDialog,	"Closed loop fuel correction", 0, {isInjectionEnabled == 1}
+		subMenu = fuelClosedLoopDialog,		"Closed loop fuel correction", 0, {isInjectionEnabled == 1}
+		subMenu = ltftConfiguration,		"Long term fuel trim correction", 0, {fuelClosedLoopCorrectionEnabled == 1}
+		groupMenu = "Long term fuel trim tables"
+		groupChildMenu = ltftTableTbl,    	"LTFT map", 0, {ltftEnabled == 1}
+		groupChildMenu = ltftCorrectionRateTbl,    "LTFT corrrection rate", 0, {ltftEnabled == 1}
+		
 		subMenu = coastingFuelCutControl,	"Deceleration fuel cutoff (DFCO)", 0, {isInjectionEnabled == 1}
 		subMenu = std_separator
 
@@ -4125,6 +4146,14 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = stftPartitionSettingsPower, {fuelClosedLoopCorrectionEnabled == 1}
 		panel = stftPartitionSettingsOverrun, {fuelClosedLoopCorrectionEnabled == 1}
 
+	dialog = ltftConfiguration, "Long term fuel trim configuration"
+		field = "Enabled",								ltftEnabled
+		field = "Correction upper limit",				ltftMaxCorrection, {ltftEnabled == 1}
+		field = "Correction lower limit",				ltftMinCorrection, {ltftEnabled == 1}
+		field = "Minimum temperature to actuate",	    ltftMinTemp, {ltftEnabled == 1}
+		field = "Minimum temperature to modify tables", ltftMinModTemp, {ltftEnabled == 1}
+		field = "Long term fuel trim permissivity",		ltftPermissivity, {ltftEnabled == 1}
+
 	dialog = lambdaProtectionLeft, ""
 		field = "Enable lambda protection", lambdaProtectionEnable
 		field = "Check above load", lambdaProtectionMinLoad, { lambdaProtectionEnable }
@@ -4432,7 +4461,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = TpsAccelPanel, "TPS"
 		field = "Set 'Debug Mode' to see detailed 'TPS acceleration enrichment' diagnostics"
-			field = "Length",						tpsAccelLookback
+		field = "Inhibit closed loop fuel after accel", noFuelTrimAfterAccelTime
+		field = "Length",						tpsAccelLookback
 		field = "Accel Threshold",				tpsAccelEnrichmentThreshold
 		field = "Decel Threshold",				tpsDecelEnleanmentThreshold
 ;		field = "Decel Multiplier",				tpsDecelEnleanmentMultiplier
