only:alphax-4k-gdi

--- a/firmware/config/boards/hellen/alphax-4K-GDI/connectors/gdi-B.yaml
+++ b/firmware/config/boards/hellen/alphax-4K-GDI/connectors/gdi-B.yaml
@@ -110,6 +110,7 @@ pins:
     class: [event_inputs, switch_inputs, analog_inputs]
     function: Input 2 Digital / Analog / SENT
     ts_name: ___ Input 2
+    color: yellow
 
   - pin: 23B
     function: Fuel Low Pressure
