--- a/java_tools/tune-tools/src/test/resources/test-mainController.ini
+++ b/java_tools/tune-tools/src/test/resources/test-mainController.ini
@@ -2273,7 +2273,7 @@ gaugeCategory = Fueling
    injectorLagMsGauge = injectorLagMs,       "fuel: injector lag",      "mSec",        0,   25.5,     1.0,    1.2,      20,    25,   3, 1
    fuelRunningGauge     = fuelRunning,       "fuel: running",      "mSec",        0,   25.5,     1.0,    1.2,      20,    25,   3, 1
    baseFuelGauge     = baseFuel,       "fuel: base",      "mSec",        0,   25.5,     1.0,    1.2,      20,    25,   3, 1
-   fuelPidCorrectionGauge = fuelPidCorrection,       "fuel: Short-term fuel trim",      "%",        -10,   10,     -8, -5, 5, 8,   3, 1
+   stftCorrectionGauge = stftCorrection1,       "fuel: Short-term fuel trim",      "%",        -10,   10,     -8, -5, 5, 8,   3, 1
 
 gaugeCategory = Throttle Body (incl. ETB)
    pedalPositionGauge = throttlePedalPosition, "Throttle pedal position",        "%",    0,    120,      0,     0,     100,   100,   1,   1
