--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -213,7 +213,10 @@ enable2ndByteCanID = false
 
 	time				= { timeNow }
 
-	egoCorrectionForVeAnalyze = { 100 + fuelPidCorrection1 }
+	egoCorrectionForVeAnalyze = { 100 + stftCorrection1 }
+
+	stftCorrection1 = { 100.0 * (stftCorrection1 - 1.0) }
+	stftCorrection2 = { 100.0 * (stftCorrection2 - 1.0) }
 
 	wbo0_hasFault = { enableAemXSeries && ((faultCode0 >= 3) && (faultCode0 != 7)) }
 
@@ -1661,8 +1664,8 @@ gaugeCategory = Fueling
 	injectorLagMsGauge = m_deadtime,		@@GAUGE_NAME_INJECTOR_LAG@@,		"mSec",		0,	10,	0,	0,		10,	10,	3, 1
 	fuelRunningGauge	= running_fuel,		@@GAUGE_NAME_FUEL_RUNNING@@,		"mg",		0,	100,	0,	0,		100,	100,	3, 1
 	baseFuelGauge	= running_baseFuel,		@@GAUGE_NAME_FUEL_BASE@@,		"mg",		0,	100, 0, 0, 100, 100,	2, 0
-	fuelPidCorrectionGauge = fuelPidCorrection1,		@@GAUGE_NAME_FUEL_TRIM@@,		"%",		-10,	10,	-8, -5, 5, 8,	3, 1
-	fuelPidCorrectionGauge2= fuelPidCorrection2,		@@GAUGE_NAME_FUEL_TRIM_2@@,		"%",		-10,	10,	-8, -5, 5, 8,	3, 1
+	stftCorrectionGauge = stftCorrection1,		@@GAUGE_NAME_FUEL_TRIM@@,		"%",		-10,	10,	-8, -5, 5, 8,	3, 1
+	stftCorrectionGauge2= stftCorrection2,		@@GAUGE_NAME_FUEL_TRIM_2@@,		"%",		-10,	10,	-8, -5, 5, 8,	3, 1
 	fuelingLoadGauge = fuelingLoad, @@GAUGE_NAME_FUEL_LOAD@@, "%", 0, 300, 0, 0, 300, 300, 1, 1
 	totalFuelConsumptionGauge = totalFuelConsumption, @@GAUGE_NAME_FUEL_CONSUMPTION@@, "g", 0, 10000, 0, 0, 10000, 10000, 0, 0
 	fuelFlowRateGauge = fuelFlowRate, @@GAUGE_NAME_FUEL_FLOW@@, "g/s", 0, 50, 0, 0, 50, 50, 2, 0
