lua script to turn a rusEFI into an IO-BOX for another rusEFI #7075 only:alphax-4k-gdi

--- a/firmware/config/boards/microrusefi/connectors/iobox.yaml
+++ b/firmware/config/boards/microrusefi/connectors/iobox.yaml
@@ -43,7 +43,7 @@ pins:
     function: low side, mid current
     ts_name: MS IO-Box 0 OUT 7
 
-# MSIOBOX_0_OUT_8 is not exist
+# MSIOBOX_0_OUT_8 does not exist
 
   - pin: 32
     id: [MSIOBOX_0_VSS_1, MSIOBOX_0_VSS_1]
