Implement `Secondary injector flow compensation mode` and `Secondary injector reference pressure` settings #6972

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2762,7 +2762,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = stagedInjection, "",	yAxis
 		field = "Enable", enableStagedInjection, {isInjectionEnabled}
 		field = ""
-		field = "Secondary injector flow", injectorSecondary_flow {isInjectionEnabled && enableStagedInjection}
+		field = "Secondary injector flow",                      injectorSecondary_flow,                     {isInjectionEnabled && enableStagedInjection}
+		field = "Secondary injector flow compensation mode",    secondaryInjectorCompensationMode,         { isInjectionEnabled && enableStagedInjection }
+		field = "Secondary injector reference pressure",        secondaryInjectorFuelReferencePressure,    { isInjectionEnabled && enableStagedInjection && secondaryInjectorCompensationMode != 0 }
 		field = ""
 		panel = injectorsSecondaryDeadTime, {isInjectionEnabled && enableStagedInjection}
 
