--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1714,6 +1714,7 @@ gaugeCategory = Sensors - Raw
 	rawAfrGauge			= rawAfr		, "Raw EGO",			"V", 0, 5, 0, 0, 5, 5, 3, 0
 	vssEdgeCounterGauge  = vssEdgeCounter, "Raw VSS",			"counter", 0, 5, 0, 0, 5, 5, 0, 0
 	issEdgeCounterGauge  = issEdgeCounter, "Raw ISS",			"counter", 0, 5, 0, 0, 5, 5, 0, 0
+	rawFlexFreqGauge = rawFlexFreq, "Raw Flex",			"Hz", 0, 5, 0, 0, 5, 5, 3, 0
 
 gaugeCategory = Transmission
 	desiredGearGauge = tcuDesiredGear, @@GAUGE_NAME_DESIRED_GEAR@@, "gear", -1, 10, -1, -1, 10, 10, 0, 0@@if_show_tcu_gauges
