only:alphax-8chan

--- a/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-D.yaml
+++ b/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-D.yaml
@@ -166,7 +166,7 @@ pins:
     function: Low Side 2
     meta: MM176_OUT_PWM7
     class: outputs
-    ts_name: 23C - Low Side 2
+    ts_name: 23D - Low Side 2
 
   - pin: 24D
     meta: MM176_GP20
