--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -148,10 +148,7 @@ PROJECT_DIR = ../firmware
 
 # Imported source files and paths
 
-# Configure libfirmware Paths/Includes
-RUSEFI_LIB = $(PROJECT_DIR)/libfirmware
-include $(RUSEFI_LIB)/util/util.mk
-include $(RUSEFI_LIB)/pt2001/pt2001.mk
+include $(PROJECT_DIR)/common_libfirmware.mk
 
 # Licensing files.
 include $(CHIBIOS)/os/license/license.mk
