--- a/firmware/config/boards/nucleo_f767/meta-info-stm32f767_osc.env
+++ b/firmware/config/boards/nucleo_f767/meta-info-stm32f767_osc.env
@@ -3,3 +3,4 @@ PROJECT_CPU=ARCH_STM32F7
 USE_FATFS=no
 EXTRA_PARAMS=-DSTM32F767xx    -DEFI_ENABLE_ASSERTS=FALSE  -DCH_DBG_ENABLE_CHECKS=FALSE -DCH_DBG_ENABLE_ASSERTS=FALSE -DCH_DBG_ENABLE_STACK_CHECK=FALSE -DCH_DBG_FILL_THREADS=FALSE -DCH_DBG_THREADS_PROFILING=FALSE
 SKIP_RATE=100
+USE_OPENBLT=yes
