Flex Fuel sensor settings should be under "Fuel sensor" fix #7097

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2194,6 +2194,7 @@ menuDialog = main
 		groupChildMenu = oilTempSensor,		"Oil temp sensor"@@if_ts_show_oil_temp_sensor
 
 		groupMenu = "Fuel sensors"
+		groupChildMenu = flexSensorDialog, "Flex"
 		groupChildMenu = fuelPressureSensor,		"Fuel pressure"@@if_ts_show_fuel_pressure_sensor
 		groupChildMenu = fuelTempSensor,			"Fuel temp sensor"@@if_ts_show_fuel_temp_sensor
 		groupChildMenu = fuelLevelDialog,			"Fuel level sensor"@@if_ts_show_fuel_level_sensor
@@ -2982,6 +2983,10 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Highest temperature",		oilTempSensor_tempC_3, {oilTempSensor_adcChannel != @@ADC_CHANNEL_NONE@@}
 		field = "Resistance @ HT",			oilTempSensor_resistance_3, {oilTempSensor_adcChannel != @@ADC_CHANNEL_NONE@@}
 
+  dialog = flexSensorDialog, "Flex Sensor"
+		field = "Flex fuel sensor",					flexSensorPin
+		field = "Flex Signal",         flexSensorInverted@@if_ts_show_flex_inverted
+
 	dialog = fuelTempSensor,	"Fuel Temp Sensor Settings"
 		field = "Input channel",			fuelTempSensor_adcChannel
 		field = "Pullup resistor",			fuelTempSensor_bias_resistor, {fuelTempSensor_adcChannel != @@ADC_CHANNEL_NONE@@}
@@ -3151,8 +3156,6 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Brake Pedal",					    brakePedalPin@@if_ts_show_brake_pedal_pin
 		field = "Brake Pedal signal",       brakePedalPinInverted@@if_ts_show_brake_pedal_pin
 		field = "Brake Pedal Mode",					brakePedalPinMode@@if_ts_show_brake_pedal_pin
-		field = "Flex fuel sensor",					flexSensorPin
-		field = "Flex Signal",         flexSensorInverted@@if_ts_show_flex_inverted
 		field = "Turbo Speed Sensor",						turboSpeedSensorInputPin
 		field = "Turbo Speed Multiplier",					turboSpeedSensorMultiplier, { turboSpeedSensorInputPin }
 		field = "Throttle inlet pressure sensor",			throttleInletPressureChannel
