--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2076,6 +2076,7 @@ menuDialog = main
 	menu = "&Advanced"
 		subMenu = smLaunchControl,				@@smLaunchControl_NAME@@
 		subMenu = ShiftTorqueReductionDialog,	"Shift Torque Reduction (Flat Shift)"
+		subMenu = NitrousControlDialog,			"Nitrous Control"
 		subMenu = ignitionCylExtra,				"Cylinder offsets", 0@@if_ts_show_odd_fire
 
 		subMenu = std_separator
@@ -4957,7 +4958,7 @@ dialog = tcuControls, "Transmission Settings"
 		panel = LaunchButtonDialog,				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@}
 
 	dialog = TorqueReductionSettings, "Settings"
-	    field = "Limit Torque Reduction Time",      limitTorqueReductionTime
+	    field = "Limit Torque Reduction Time",		limitTorqueReductionTime
 		field = "Torque Reduction Time",			torqueReductionTime,            {limitTorqueReductionTime != 0}
 		field = "Torque Reduction Arming RPM",		torqueReductionArmingRpm
 		field = "Torque Reduction Arming APP",		torqueReductionArmingApp
@@ -4965,13 +4966,37 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Torque Reduction Ignition Cut",	torqueReductionIgnitionCut
 
 	dialog = ShiftTorqueReductionSettingsDialog, "", yAxis
-		field = "Enable Shift Torque Reduction",	torqueReductionEnabled
+		field = "Enable Shift Torque Reduction",		torqueReductionEnabled
 		panel = TorqueReductionActivationModeDialog,	{torqueReductionEnabled == 1}
 		panel = TorqueReductionSettings,				{torqueReductionEnabled == 1 && ((torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_BUTTON@@ && torqueReductionTriggerPin != 0) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@ && launchActivatePin != 0))}
 
 	dialog = ShiftTorqueReductionDialog, "", border
 		panel = ShiftTorqueReductionSettingsDialog, West
 		panel = shift_torque_reduction_stateDialog, East
+
+	dialog = NitrousControlButtonDialog, "Digital Switch Input"
+		field = "Nitrous Control Button",	nitrousControlTriggerPin
+		field = "Nitrous Control Inverted",	nitrousControlTriggerPinInverted,	{nitrousControlTriggerPin != 0}
+		field = "Nitrous Control Mode",		nitrousControlTriggerPinMode,		{nitrousControlTriggerPin != 0}
+
+	dialog = NitrousControlLuaGaugeDialog, "Lua Gauge"
+		field = "Lua Gauge",		nitrousLuaGauge
+		field = "Value Meaning",	nitrousLuaGaugeMeaning
+		field = "Arming Value",		nitrousLuaGaugeArmingValue
+
+	dialog = NitrousControlArmingMethodDialog, "Arming Method", yAxis
+		field = "Arming Method",				nitrousControlArmingMethod
+		panel = NitrousControlButtonDialog,		{nitrousControlArmingMethod == @@nitrous_arming_method_e_DIGITAL_SWITCH_INPUT@@}
+		panel = NitrousControlLuaGaugeDialog,	{nitrousControlArmingMethod == @@nitrous_arming_method_e_LUA_GAUGE@@}
+
+	dialog = NitrousControlSettingsDialog, "", yAxis
+		field = "Enable Nitrous Control",			nitrousControlEnabled
+		panel = NitrousControlArmingMethodDialog,	{nitrousControlEnabled == 1}
+;		panel = NitrousControlSettings,				{nitrousControlEnabled == 1 && ((nitrousControlArmingMethod == @@nitrous_arming_method_e_DIGITAL_SWITCH_INPUT@@ && nitrousControlTriggerPin != 0) || (nitrousControlArmingMethod == @@nitrous_arming_method_e_LUA_GAUGE@@))}
+
+	dialog = NitrousControlDialog
+		panel = NitrousControlSettingsDialog, West
+		panel = nitrous_control_stateDialog, East
 
 	dialog = smLaunchControl, "", border
 		panel = smLaunchControlWest, West
