SENT: channels abstraction
First we define gpios used for SENT channels
Then we glue sensors to SENT channels

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2969,8 +2969,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Resistance @ HT",						auxTempSensor2_resistance_3, {auxTempSensor2_adcChannel != @@ADC_CHANNEL_NONE@@}
 
 	dialog = tpsSent1, "SENT TPS"
-		field = "Input #1",								sentInputPins1
-		field = "ETB type",							    sentEtbType, {sentInputPins1 != 0}
+		field = "ETB SENT type",					    sentEtbType
+		field = "ETB SENT input"						EtbSentInput, {sentEtbType != 0 }
 		field = "Closed value",                         customSentTpsMin, {sentEtbType == @@SentEtbType_CUSTOM@@ }
 		field = "Open value",                           customSentTpsMax, {sentEtbType == @@SentEtbType_CUSTOM@@ }
 
