SENT: TS settings for high pressure fuel sensor

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3438,19 +3438,32 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = oilp_settings, West
 		panel = oilPressureGauges, East
 
-	dialog = fuelp_settings, "Fuel Pressure Sensor"
-		field = "Fuel low pressure input",			    lowPressureFuel_hwChannel
+	dialog = fuellop_analog_settings, "Sensor scaling"
 		field = "low voltage",							lowPressureFuel_v1, {lowPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
 		field = "low pressure",							lowPressureFuel_value1, {lowPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
 		field = "high voltage",							lowPressureFuel_v2, {lowPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
 		field = "high pressure",						lowPressureFuel_value2, {lowPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
-		field = "sensor type",							fuelPressureSensorMode, {lowPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
 
-		field = "Fuel high pressure input",			    highPressureFuel_hwChannel
+	dialog = fuelhip_analog_settings, "Sensor scaling"
 		field = "low voltage",							highPressureFuel_v1, {highPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
 		field = "low pressure",							highPressureFuel_value1, {highPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
 		field = "high voltage",							highPressureFuel_v2, {highPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
 		field = "high pressure",						highPressureFuel_value2, {highPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
+
+	dialog = fuellop_settings, "Fuel Low Pressure Sensor"
+		field = "Analog input",			    			lowPressureFuel_hwChannel
+		field = "sensor type",							fuelPressureSensorMode, {lowPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
+		panel = fuellop_analog_settings, {lowPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
+
+	dialog = fuelhip_settings, "Fuel High Pressure Sensor"
+		field = "Sensor SENT type"						FuelHighPressureSentType
+		field = "Sensor SENT input"						FuelHighPressureSentInput, {FuelHighPressureSentType != 0 }
+		field = "Analog input",							highPressureFuel_hwChannel, {FuelHighPressureSentType == 0 }
+		panel = fuelhip_analog_settings, {FuelHighPressureSentType == 0 && highPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
+
+	dialog = fuelp_settings, "Fuel Pressure Sensor"
+		panel = fuellop_settings
+		panel = fuelhip_settings
 
 	dialog = fuelPressureGauges
 		gauge = lowFuelPressureGauge
