--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2188,6 +2188,10 @@ menuDialog = main
 		subMenu = widebandConfig,			"rusEFI Wideband Controller", 0, { canReadEnabled && canWriteEnabled }@@if_ts_show_can_wbo
 		subMenu = std_separator
 
+		# SENT interface
+		subMenu = sentInputs				"SENT inputs"
+		subMenu = std_separator
+
 		# Misc sensors
 		groupMenu = "Oil sensors"
 		groupChildMenu = oilPressureSensor,	"Oil pressure"@@if_ts_show_oil_pressure_sensor
@@ -2965,8 +2969,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Resistance @ HT",						auxTempSensor2_resistance_3, {auxTempSensor2_adcChannel != @@ADC_CHANNEL_NONE@@}
 
 	dialog = tpsSent1, "SENT TPS"
-		field = "Input #1",								sentInputPins1
-		field = "ETB type",							    sentEtbType, {sentInputPins1 != 0}
+		field = "ETB SENT type",					    sentEtbType
+		field = "ETB SENT input"						EtbSentInput, {sentEtbType != 0 }
 		field = "Closed value",                         customSentTpsMin, {sentEtbType == @@SentEtbType_CUSTOM@@ }
 		field = "Open value",                           customSentTpsMax, {sentEtbType == @@SentEtbType_CUSTOM@@ }
 
@@ -3506,8 +3510,11 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = auxLinearSensor2
 		field = "Aux Speed Input 1",					auxSpeedSensorInputPin1
 		field = "Aux Speed Input 2",					auxSpeedSensorInputPin2
-    field = "Use Aux Speed Sensors for slip ratio", useAuxSpeedForSlipRatio
-    field = "Use VSS As Second Wheel Speed", useVssAsSecondWheelSpeed
+		field = "Use Aux Speed Sensors for slip ratio",	useAuxSpeedForSlipRatio
+		field = "Use VSS As Second Wheel Speed",		useVssAsSecondWheelSpeed
+
+    dialog = sentInputs, "SENT protocol inputs"
+		field = "SENT Input #1",						sentInputPins1
 
 ;			Sensors->MAP sensor
 	dialog = mapSensorAnalog, "MAP sensor", yAxis
