baro correction label typo

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1057,7 +1057,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
       upDownLabel = "(RICHER)", "(LEANER)"
 
 	table = baroCorrTbl,  baroCorrMap,  "Baro Correction",	1
-		xyLabels = "RPM", "Ignition Load"
+		xyLabels = "RPM", "Pressure"
 		xBins		= baroCorrRpmBins,  RPMValue
 		yBins		= baroCorrPressureBins,  baroPressure
 		zBins		= baroCorrTable
