implement `Minimum TPS` setting #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4989,10 +4989,13 @@ dialog = tcuControls, "Transmission Settings"
 		panel = NitrousControlButtonDialog,		{nitrousControlArmingMethod == @@nitrous_arming_method_e_DIGITAL_SWITCH_INPUT@@}
 		panel = NitrousControlLuaGaugeDialog,	{nitrousControlArmingMethod == @@nitrous_arming_method_e_LUA_GAUGE@@}
 
+	dialog = NitrousControlSettings, "Settings"
+		field = "Minimum TPS",	nitrousMinimumTps
+
 	dialog = NitrousControlSettingsDialog, "", yAxis
 		field = "Enable Nitrous Control",			nitrousControlEnabled
 		panel = NitrousControlArmingMethodDialog,	{nitrousControlEnabled == 1}
-;		panel = NitrousControlSettings,				{nitrousControlEnabled == 1 && ((nitrousControlArmingMethod == @@nitrous_arming_method_e_DIGITAL_SWITCH_INPUT@@ && nitrousControlTriggerPin != 0) || (nitrousControlArmingMethod == @@nitrous_arming_method_e_LUA_GAUGE@@))}
+		panel = NitrousControlSettings,				{nitrousControlEnabled == 1 && ((nitrousControlArmingMethod == @@nitrous_arming_method_e_DIGITAL_SWITCH_INPUT@@ && nitrousControlTriggerPin != 0) || (nitrousControlArmingMethod == @@nitrous_arming_method_e_LUA_GAUGE@@))}
 
 	dialog = NitrousControlDialog
 		panel = NitrousControlSettingsDialog, West
