implement `Minimum CLT` setting #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4991,6 +4991,7 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = NitrousControlSettings, "Settings"
 		field = "Minimum TPS",	nitrousMinimumTps
+		field = "Minimum CLT",	nitrousMinimumClt
 
 	dialog = NitrousControlSettingsDialog, "", yAxis
 		field = "Enable Nitrous Control",			nitrousControlEnabled
