implement `Maximum MAP` setting #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4992,6 +4992,7 @@ dialog = tcuControls, "Transmission Settings"
 	dialog = NitrousControlSettings, "Settings"
 		field = "Minimum TPS",	nitrousMinimumTps
 		field = "Minimum CLT",	nitrousMinimumClt
+		field = "Maximum MAP",	nitrousMaximumMap
 
 	dialog = NitrousControlSettingsDialog, "", yAxis
 		field = "Enable Nitrous Control",			nitrousControlEnabled
